<resources>
    <string name="app_name">Allpresan®</string>
    <string name="action_settings">Settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="no_login">öffentlicher Bereich</string>
    <string name="treatment_tip">Behandlungstipps</string>
    <string name="product">Produkte</string>
    <string name="product_scanner">Produktscanner</string>
    <string name="service_questions">Servicefragen</string>
    <string name="faq_forum">FAQ / Forum</string>
    <string name="inci_lexicon">Inhaltsstoff-Lexikon</string>
    <string name="about_us">Über uns</string>
    <string name="contact">Kontakt</string>
    <string name="news">News</string>
    <string name="allpresan_academy">Allpresan Akademie</string>
    <string name="foot_prefessional_search">Fußprofi-Suche</string>
    <string name="data_protection">Datenschutz</string>
    <string name="impressum">Impressum</string>
    <string name="training_tool">Schulungstool</string>
    <string name="event_training">Events / Fortbildungen</string>
    <string name="features">Features</string>
    <string name="have_login">Gesicherter Bereich</string>
    <string name="loggedin">Logged in</string>
    <string name="more_info">Weitere Infos >></string>
    <string name="hint_search">Suchen...</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor.</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_message">Nachricht</string>
    <string name="agreement_content">Ich erkläre mich damit einverstanden, dass neubourg skin care GmbH &amp; Co.KG die beigefügten Fotos in Online- und/oder Printmedien veröffentlichen darf.
\n\nDieses Einverständnis kann jederzeit - auch teilweise - widerrufen werden und gilt ansonsten zeitlich unbeschränkt.</string>
    <string name="the_agreement">Einverständnis</string>
    <string name="the_agreement_title">Einverständniserklärung</string>
    <string name="the_agreement_content">Ich erkläre mich damit einverstanden, dass Neubourg skin care GmbH &amp; Co.KG die beigefügten Fotos in Online- und/oder Printmedien veröffentlichen darf. Es besteht und ergibt sich kein Haftungsanspruch gegenüber der  Neubourg skin care GmbH &amp; Co.KG für Art und Form der Nutzung der oben aufgeführten Nutzungen, zum Beispiel für das Herunterladen von Bildern und deren anschließender Nutzung durch Dritte
(Nach § 22 KUG (Kunsturhebergesetz) ist eine Veröffentlichung grundsätzlich nur zulässig, wenn zuvor die Einwilligung der Abgebildeten eingeholt wurde. Allerdings ist nach § 23 KUG eine Einwilligung nicht erforderlich, wenn die abgebildeten Personen nicht den Motivschwerpunkt bilden, oder sie "Personen der Zeitgeschichte" bzw. Teil einer Versammlung/Veranstaltung sind.)

Dieses Einverständnis kann jederzeit - auch teilweise - widerrufen werden und gilt ansonsten zeitlich unbeschränkt.
</string>
    <string name="send">Senden</string>
	<string name="sending">Senden...</string>
    <string name="send_success">Ihre Anfrage wurde erfolgreich versendet.</string>
    <string name="scan_product">Produkt scannen für wichtige Inhaltsstoffe</string>
    <string name="evalutaion">Auswertung</string>
    <string name="not_be_able_to_scan">Can\'t scan now! \nMake sure you have internet connection!</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="loading">Loading</string>
    <string name="download">Downloading</string>
    <string name="checking_database">Checking data from server</string>
    <string name="extract">Extracting</string>
    <string name="network_error">Network error</string>
    <string name="close">Schließen</string>
    <string name="info">Information</string>
    <string name="yes">Ja</string>
    <string name="ok">Ok</string>
    <string name="confirm_title">Confirm</string>
    <string name="no">Nein</string>
    <string name="confirm_content">Do you want to delete item selected?</string>
    <string name="No_product">No having product in this group </string>
    <string name="sending_error">Ihr Ergebnis konnte nicht versendet werden. Bitte überprüfen Sie ihre Internetverbindung und versuchen Sie es erneut.</string>
    <string name="sending_ok">Ihre Ergebnis wurde erfolgreich versendet.</string>
    <string name="confirm_selected">Please choose item to delete!</string>
    <string name="login_failed">Ihre Kundennummer oder Postleitzahl ist nicht korrekt. Bitte versuchen Sie es erneut.</string>
    <string name="send_contact_failed">Ihre Anfrage konnte nicht versendet werden. Bitte überprüfen Sie ihre Internetverbindung und versuchen Sie es erneut.</string>
    <string name="error">Fehler</string>
    <string name="error_scan">Der gescannte EAN Code konnte keinem Allpresan® Produkt zugeordnet werden.</string>
    <string name="error_no_internet_for_foot_profi">Zum Aufrufen der Fußprofi-Suche wird eine Internetverbindung benötigt. Bitte überprüfen Sie die Internetverbindung und versuchen Sie es erneut.</string>
    <string name="cancel">Abbrechen</string>
    <string name="finish">Beenden</string>
    <string name="login">Gesicherter Bereich</string>
    <string name="login_button">Login</string>
    <string name="logout">Logout</string>
    <string name="postcode">Postleitzahl</string>
    <string name="customer_number">Kundennummer</string>
    <string name="save_login">Logindaten speichern</string>
    <string name="logout_confirm">Möchten Sie sich wirklich ausloggen?</string>
    <string name="logout_title">Bestätigung</string>
    <string name="forgot_password">Kundennummer vergessen oder Neukunde werden?</string>
    <string name="home">Herzlich Willkommen</string>
    <string name="text_first_run">Sind Sie Endverbraucher oder ein Fuß-Profi?</string>
    <string name="end_user">Endverbraucher</string>
    <string name="login_user">Fuß-Profi</string>
    <string name="productList">Produktvorschlag</string>
    <string name="take_photo_error">Bei der Aufnahme des Bildes ist ein Fehler aufgetreten. Bitte nehmen Sie ein neues Bild auf.</string>
    <string name="email_address_empty">Email can not be empty!</string>
    <string name="choosen_email_client">Choose an Email client :</string>
    <string name="send_mail_error">Send mail is error</string>
    <string name="product_group">Produktgruppe</string>
    <string name="text_treatment_contact"> Haben Sie oder Ihre Patienten Fußprobleme, bei denen Sie sich unsicher sind, welches Allpresan® Produkt dort empfehlenswert ist? \nDann schicken Sie uns ein Bild und eine Beschreibung. Wir helfen Ihnen gerne weiter.
</string>
    <string name="accept_foto_message">Bitte erteilen Sie uns ihr Einverständnis zur Veröffentlichung des Fotos.</string>
    <string name="no_date_event">No date</string>
    <string name="title_schulungTool">PODOEXPERT</string>
    <string name="schulungTool">Fragebogen</string>
    <string name="note_schulungTool">(je eine Antwort pro Frage is richtig)</string>
    <string name="next">&gt;&gt;</string>
    <string name="previous">&lt;&lt;</string>
    <string name="question1">1. Die Haut ist... </string>
    <string name="question2">2. Die Hautbarriere...</string>
    <string name="question3">3. Die Lipide der Lipidmatrix...</string>
    <string name="question4">4. Die Folgen einer trockenen Haut...</string>
    <string name="question5">5. Die wichtigste Maßnahme zur Behandlung und Pflege der trockenen Haut ist...</string>
    <string name="question6">6. Grundlage für die LIPO2 Haut-Repair-Technologie ist...</string>
    <string name="question7">7. Aufgrund der Ähnlichkeit mit den natürlichen Lipiden der Hautbarriere...</string>
    <string name="question8">8. Einzigartig ist...</string>
    <string name="question9">9. Die Vorteile der Allpresan® PODOEXPERT Fußprofi- exklusiven Produktlinie:</string>
    <string name="anwser1_1">eine lose Hülle, die unseren Körper zusammenhält.</string>
    <string name="anwser1_2">mit einer Fläche von rund 2 m2 unser größtes Organ.</string>
    <string name="anwser1_3">aus mehreren Schichten aufgebaut, die alle aus toten Zellen bestehen.</string>
    <string name="anwser2_1">besteht aus abgestorbenen, verhornten Zellen, die von einer extrazellulären Lipidmatrix umgeben sind.</string>
    <string name="anwser2_2">ist die Schicht der Haut, in der sich Bakterien, Pilze und andere Einzeller besonders gut vermehren.</string>
    <string name="anwser2_3">sorgt für einen zügigen Durchtritt von CO2 und Sauerstoff.</string>
    <string name="anwser3_1">haben einen Kopf und zwei Beine.</string>
    <string name="anwser3_2">besitzen einen polaren, wasserlöslichen Kopf, an den sich unpolare, fettlösliche Fettsäureketten anschließen.</string>
    <string name="anwser3_3">sind fettige Substanzen der Hautbarriere, die häufig die Poren verstopfen.</string>
    <string name="anwser4_1">sind Hautschuppen in der Kleidung.</string>
    <string name="anwser4_2">sind schlechtere Vermehrung von Bakterien und Pilzen auf der Haut.</string>
    <string name="anwser4_3">sind eine Störung der Hautbarriere, der Verlust der Schutzfunktion und ein erhöhtes Risiko für Entzündungen und Infektionen.</string>
    <string name="anwser5_1">die schnellstmögliche Reparatur der gestörten Haut-barriere durch Auffüllen der Lücken im Lipidfilm und ein schnellstmöglicher Ausgleich des Feuchtigkeitsdefizits durch Zufuhr von Feuchthaltefaktoren.</string>
    <string name="anwser5_2">vorsichtige Entfernung der Hautschuppen durch ein 240er Schmirgelpapier.</string>
    <string name="anwser5_3">das ausführliche Baden der betroffenen Hautpartien in lauwarmer 0,9%iger Kochsalzlösung.</string>
    <string name="anwser6_1">die Tatsache, dass sich Lipide wie ein Schmierfilm auf die Haut legen und so die Bakterien und Pilze der Haut vor äußeren Einflüssen schützen und somit die Hautbarriere stabilisieren.</string>
    <string name="anwser6_2">die Entfernung von instabilen Lipiden in der Haut- barriere, so dass die Haut besser atmen kann.</string>
     <string name="text_company">Firma (optional)</string>
    <string name="text_name">Vorname (Pflicht)</string>
    <string name="text_surname">Nachname (Pflicht)</string>
    <string name="text_street_house_number">Straße + Haus-Nr. (Pflicht)</string>
    <string name="text_plz">PLZ (Pflicht)</string>
    <string name="text_ort">Ort (Pflicht)</string>
    <string name="text_email">Email (Pflicht)</string>
    <string name="text_phone">Telefon (optional)</string>
    <string name="text_message">Nachricht (Pflicht)</string>
    <string name="text_call_phone">Bitte um Rückruf</string>
    <string name="text_copy">Kopie an die angegebene Email Adresse senden</string>
    <string name="contact_text_1">Wir sind für Sie da!\nWenn Sie weitere Fragen, Anregungen oder Wünsche haben, kontaktieren Sie uns gern.</string>
    <string name="contact_text_2">Schreiben Sie uns eine Nachricht über das untenstehende Kontaktformular, oder rufen Sie uns an.</string>
    <string name="contact_text_3">Wir verwenden Ihre Daten ausschließlich zur Beantwortung Ihrer Kontaktanfrage. Mehr Informationen finden Sie in unserer Datenschutzerklärung.</string>
    <string name="training_tool_result">Sie haben von den 9 Fragen</string>
    <string name="training_tool_send_info">Schicken Sie uns jetzt die Allpresan® PODOEXPERT Testergebnisse und Sie erhalten ein hochwertiges Zertifikat kostenfrei zugeschickt.</string>
</resources>